--- a/_units/07.md
+++ b/_units/07.md
@@ -5,8 +5,8 @@
 ###
 title: Rhythm
 number: 0
-short_description: short description of the unit
-summary: brief summary of the unit
+short_description: Unit on Rhythm and Meter
+summary: rhythm, meter, coupled oscillators, neuronal entrainment
 authors: 
  - Psyche Loui
  - John MacCallum
@@ -228,7 +228,7 @@ Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
 ## Links and Downloads
 
-AccelerandoExplorer 
+AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL --!>
 
 Doug Eck's java simulator of oscillators - provides explanations of coupled oscillator models in rhythm. http://www.iro.umontreal.ca/~eckdoug/vibe/index.html 
 
