--- a/_units/07.md
+++ b/_units/07.md
@@ -228,7 +228,7 @@ Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
 ## Links and Downloads
 
-AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL --!>
+AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL -->
 
 Doug Eck's java simulator of oscillators - provides explanations of coupled oscillator models in rhythm. http://www.iro.umontreal.ca/~eckdoug/vibe/index.html 
 
