touchup unit 7 on rhythm

--- a/_units/07.md
+++ b/_units/07.md
@@ -30,21 +30,21 @@ mathjax: true
 
 ## Introduction
 
-TactuS
-TatuM
-AccentsAndEventStreamVectors
-MicrotimingAndExpressiveTiming
-TimeMaps
-ScoreTimeVsPerformanceTime
-RhythmoGram
-ModelsOfRhythmPerception
-IntervalTiming
-CovarianceModel
-CoupledOscillator
-SumMary
-ReferenceS
-LinksnDownloads
-QuizItems
+Tactus
+Tatum
+Accents And Event Stream Vectors
+Microtiming And Expressive Timing
+Time Maps
+Score Time Vs Performance Time
+Rhythmogram
+Models Of Rhythm Perception
+Interval Timing
+Covariance Model
+Coupled Oscillator
+Summary
+References
+Links and Downloads
+Quiz Items
 
 While pitch has received the most attention in perception research, whereas most of music theory consists of putting pitches together to form harmonies, relatively little of common-practice Western musical theory addresses rhythm. Here we define rhythm as the pattern of temporal durations, especially in music. In this unit we will examine the perception and cognition of rhythm. We will begin with the basic observations, e.g. what the optimal range of rhythm and meter are, and how rhythmic subdivisions and expressive timing occur. Then we will discuss the various representations of rhythm, somewhat analogous to visual representations of pitch covered in Unit 5. Finally we will talk about models of rhythm perception and production, and bring in existing literature in an attempt to explain the temporal regularities and deviations that give rise to the human sense of rhythm.
 
